--- a/tailwind.css
+++ b/tailwind.css
@@ -17,7 +17,7 @@
         padding-right: 0.75rem;
         padding-bottom: 0.5rem;
         padding-left: 0.75rem;
-        font-size: 1.2rem;
+        /* font-size: 1.2rem; */
         line-height: 1.5rem;
     }
 
